# fred_api_ana

./: .gitignore  README.md  bonds_2026-03-14.json  fred_bonds.py
fred-fx-research/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
fred-fx-research/app/api/: main.py
fred-fx-research/app/core/: config.py  exceptions.py  logging.py
fred-fx-research/app/models/: api_models.py  domain_models.py
fred-fx-research/app/services/: cross_asset_feature_service.py  csv_ingest_service.py  csv_loader_service.py  event_study_service.py  factor_service.py  filter_lab_service.py  fred_client.py  freshness_service.py  ingest_service.py  join_panel_service.py  market_bar_service.py  memo_service.py  normalize_service.py  panel_service.py  regime_service.py  registry_service.py  rolling_stats_service.py  validation_service.py
fred-fx-research/app/storage/: duckdb.py  parquet_io.py
fred-fx-research/docs/: api_reference.md  improvement_plan.md  operation_manual.md
fred-fx-research/jobs/: backfill_series.py  daily_refresh.py  load_csv_ohlc.py  load_usatech_csv.py  rebuild_cross_asset_daily.py  rebuild_fx_cross_asset_panel.py  refresh_release_calendar.py
fred-fx-research/sql/: schema.sql  schema_cross_asset.sql
fred-fx-research/tests/: conftest.py
fred-fx-research/tests/e2e/: test_api_e2e.py
fred-fx-research/tests/integration/: test_ingest.py  test_vintage.py
fred-fx-research/tests/unit/: test_api_response.py  test_cross_asset_features.py  test_csv_ingest.py  test_factors.py  test_freshness.py  test_normalizer.py  (+1 more)
fred-fx-research/ui/: Home.py  tz_utils.py
(+39 files in other folders)
