[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fred-fx-research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "duckdb>=0.10.0",
    "polars>=0.20.0",
    "pandera>=0.19.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]
